--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "ecommerce rest api",
   "main": "index.js",
   "scripts": {
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "amanbarar",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.18.2"
+  }
 }
